--- a/docs/guides/DAG-representation.ipynb
+++ b/docs/guides/DAG-representation.ipynb
@@ -3,14 +3,8 @@
   {
    "cell_type": "markdown",
    "id": "4cb32582",
-   "metadata": {
-    },
+   "metadata": {},
    "source": [
-    "",
-    "",
-    "",
-    "",
-    "\n",
     "<!-- cspell:ignore subdag DAGOpNode qargs cargs dag_drawer -->\n",
     "# Work with DAGs in transpiler passes\n",
     "\n",
@@ -20,8 +14,7 @@
     "\n",
     "## Build a circuit and examine its DAG\n",
     "\n",
-    "The code snippet below illustrates the DAG by creating a simple circuit that prepares a Bell state and applies an $R_Z$​ rotation, depending on the measurement outcome.\n",
-    "\n"
+    "The code snippet below illustrates the DAG by creating a simple circuit that prepares a Bell state and applies an $R_Z$​ rotation, depending on the measurement outcome."
    ]
   },
   {
@@ -48,7 +41,7 @@
     "with circ.if_test((c, 2)):\n",
     "    circ.rz(0.5, q[1])\n",
     "\n",
-    "circuit_drawer(circ, output='mpl')\n"
+    "circuit_drawer(circ, output='mpl')"
    ]
   },
   {
@@ -56,9 +49,7 @@
    "id": "5971b6ed",
    "metadata": {},
    "source": [
-    "\n",
-    "In the DAG, there are three kinds of graph nodes: qubit/clbit input nodes (green), operation nodes (blue), and output nodes (red). Each edge indicates data flow (or dependency) between two nodes. Use the qiskit.tools.visualization.dag_drawer() function to view this circuit's DAG. (Install the [Graphviz library](https://graphviz.org/download/) to run this.).\n",
-    "\n"
+    "In the DAG, there are three kinds of graph nodes: qubit/clbit input nodes (green), operation nodes (blue), and output nodes (red). Each edge indicates data flow (or dependency) between two nodes. Use the qiskit.tools.visualization.dag_drawer() function to view this circuit's DAG. (Install the [Graphviz library](https://graphviz.org/download/) to run this.)."
    ]
   },
   {
@@ -70,7 +61,7 @@
    "source": [
     "# Convert to DAG\n",
     "dag = circuit_to_dag(circ)\n",
-    "dag_drawer(dag)\n"
+    "dag_drawer(dag)"
    ]
   },
   {
@@ -78,12 +69,11 @@
    "id": "3b728136",
    "metadata": {},
    "source": [
-    "\n",
     "## Basic DAG operations\n",
     "\n",
     "The code examples below demonstrate common operations with DAGs, including accessing nodes, adding operations, and substituting subcircuits. These operations form the foundation for building transpiler passes.\n",
     "## Get all operation nodes in the DAG\n",
-    "The ```op_nodes()``` method returns an iterable list of ```DAGOpNode``` objects in the circuit:\n"
+    "The ```op_nodes()``` method returns an iterable list of ```DAGOpNode``` objects in the circuit:"
    ]
   },
   {
@@ -93,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dag.op_nodes()\n"
+    "dag.op_nodes()"
    ]
   },
   {
@@ -101,8 +91,7 @@
    "id": "8f2676b9",
    "metadata": {},
    "source": [
-    "Each node is an instance of the ```DAGOpNode``` class:\n",
-    "\n"
+    "Each node is an instance of the ```DAGOpNode``` class:"
    ]
   },
   {
@@ -117,7 +106,7 @@
     "print(\"op:\", node.op)\n",
     "print(\"qargs:\", node.qargs)\n",
     "print(\"cargs:\", node.cargs)\n",
-    "print(\"condition:\", node.op.condition)\n"
+    "print(\"condition:\", node.op.condition)"
    ]
   },
   {
@@ -126,8 +115,7 @@
    "metadata": {},
    "source": [
     "## Add an operation to the back\n",
-    "An operation is added to the end of the DAGCircuit using the ```apply_operation_back()``` method. This appends the specified gate to act on the given qubits after all existing operations in the circuit.\n",
-    "\n"
+    "An operation is added to the end of the DAGCircuit using the ```apply_operation_back()``` method. This appends the specified gate to act on the given qubits after all existing operations in the circuit."
    ]
   },
   {
@@ -139,7 +127,7 @@
    "source": [
     "from qiskit.circuit.library import HGate\n",
     "dag.apply_operation_back(HGate(), qargs=[q[0]])\n",
-    "dag_drawer(dag)\n"
+    "dag_drawer(dag)"
    ]
   },
   {
@@ -148,7 +136,7 @@
    "metadata": {},
    "source": [
     "## Add an Operation to the Front\n",
-    "An operation is added to the beginning of the DAGCircuit using the ```apply_operation_front()``` method. This inserts the specified gate before all existing operations in the circuit, effectively making it the first operation executed.\n"
+    "An operation is added to the beginning of the DAGCircuit using the ```apply_operation_front()``` method. This inserts the specified gate before all existing operations in the circuit, effectively making it the first operation executed."
    ]
   },
   {
@@ -160,7 +148,7 @@
    "source": [
     "from qiskit.circuit.library import CCXGate\n",
     "dag.apply_operation_front(CCXGate(), qargs=[q[0], q[1], q[2]])\n",
-    "dag_drawer(dag)\n"
+    "dag_drawer(dag)"
    ]
   },
   {
@@ -169,8 +157,7 @@
    "metadata": {},
    "source": [
     "## Substitute a node with a subcircuit\n",
-    "A node representing a specific operation in the DAGCircuit is replaced with a subcircuit. First, a new sub-DAG is constructed with the desired sequence of gates, then the target node is substituted by this sub-DAG using ```substitute_node_with_dag()```, preserving the connections to the rest of the circuit.\n",
-    "\n"
+    "A node representing a specific operation in the DAGCircuit is replaced with a subcircuit. First, a new sub-DAG is constructed with the desired sequence of gates, then the target node is substituted by this sub-DAG using ```substitute_node_with_dag()```, preserving the connections to the rest of the circuit."
    ]
   },
   {
@@ -193,7 +180,7 @@
     "# Replace CX with mini_dag\n",
     "cx_node = dag.op_nodes(op=CXGate).pop()\n",
     "dag.substitute_node_with_dag(cx_node, mini_dag, wires=[p[0], p[1]])\n",
-    "dag_drawer(dag)\n"
+    "dag_drawer(dag)"
    ]
   },
   {
@@ -201,8 +188,7 @@
    "id": "028566f7",
    "metadata": {},
    "source": [
-    "After all transformations are completed, the DAG can be converted back into a regular ```QuantumCircuit object```. This is how the transpiler pipeline operates. A circuit is taken, processed in DAG form, and a transformed circuit is produced as output.\n",
-    "\n"
+    "After all transformations are completed, the DAG can be converted back into a regular ```QuantumCircuit object```. This is how the transpiler pipeline operates. A circuit is taken, processed in DAG form, and a transformed circuit is produced as output."
    ]
   },
   {
@@ -214,7 +200,7 @@
    "source": [
     "from qiskit.converters import dag_to_circuit\n",
     "new_circ = dag_to_circuit(dag)\n",
-    "circuit_drawer(new_circ, output='mpl')\n"
+    "circuit_drawer(new_circ, output='mpl')"
    ]
   },
   {
@@ -222,18 +208,14 @@
    "id": "f743bb3b",
    "metadata": {},
    "source": [
-    "\n",
     "## Implement a BasicMapper pass\n",
     "The DAG structure can be leveraged for writing transpiler passes. In the example below, a ```BasicMapper``` pass is implemented to map an arbitrary circuit onto a device with restricted qubit connectivity. For additional guidance,refer to the guide on [writing custom transpiler passes](https://docs.quantum.ibm.com/guides/custom-transpiler-pass).\n",
-    "\n",
     "\n",
     "The pass is defined as a ```TransformationPass```, meaning that it modifies the circuit. It does so by traversing the DAG layer-by-layer, checking whether each instruction satisfies the constraints imposed by the device's coupling map. If a violation is detected, a swap path is determined and the necessary SWAP gates are inserted accordingly.\n",
     "\n",
     "When creating a transpiler pass, the first decision involves selecting whether the pass should inherit from ```TransformationPass``` or ```AnalysisPass```. Transformation passes are designed to modify the circuit, whereas analysis passes are intended only to extract information for use by subsequent passes. The main functionality is then implemented in the ```run(dag)``` method. Finally, the pass should be registered within the ```qiskit.transpiler.passes module```.\n",
     "\n",
-    "In this specific pass, the DAG is traversed layer-by-layer (where each layer contains operations that act on disjoint sets of qubits and can thus be executed independently). For each operation, if the coupling map constraints are not met, a suitable swap path is identified, and the required swaps are inserted to bring the involved qubits into adjacency.\n",
-    "\n",
-    "\n"
+    "In this specific pass, the DAG is traversed layer-by-layer (where each layer contains operations that act on disjoint sets of qubits and can thus be executed independently). For each operation, if the coupling map constraints are not met, a suitable swap path is identified, and the required swaps are inserted to bring the involved qubits into adjacency."
    ]
   },
   {
@@ -285,7 +267,7 @@
     "\n",
     "            new_dag.compose(subdag, qubits=current_layout.reorder_bits(new_dag.qubits))\n",
     "\n",
-    "        return new_dag\n"
+    "        return new_dag"
    ]
   },
   {
@@ -293,10 +275,7 @@
    "id": "4a95eaab",
    "metadata": {},
    "source": [
-    "\n",
-    "The pass can now be tested on a small example circuit. A pass manager is constructed with the newly defined pass included. The example circuit is then provided to this pass manager, and a new, transformed circuit is obtained as the output.\n",
-    "\n",
-    "\n"
+    "The pass can now be tested on a small example circuit. A pass manager is constructed with the newly defined pass included. The example circuit is then provided to this pass manager, and a new, transformed circuit is obtained as the output."
    ]
   },
   {
@@ -328,7 +307,7 @@
     "out_circ = pm.run(in_circ)\n",
     "\n",
     "in_circ.draw(output='mpl')\n",
-    "out_circ.draw(output='mpl')\n"
+    "out_circ.draw(output='mpl')"
    ]
   },
   {
@@ -336,11 +315,8 @@
    "id": "56b80ce3",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "## DAGOpNode Attributes in Qiskit\n",
-    "For a complete reference of available attributes and methods for ```DAGOpNode```, please see the [Qiskit API documentation](https://docs.quantum.ibm.com/api/qiskit/dagcircuit).\n",
-    "\n"
+    "For a complete reference of available attributes and methods for ```DAGOpNode```, please see the [Qiskit API documentation](https://docs.quantum.ibm.com/api/qiskit/dagcircuit)."
    ]
   }
  ],
