--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b58546f5-fe44-488d-b402-b723a5eff5f4",
+   "id": "95773b45-4aca-44f2-924b-253f63cee7fa",
    "metadata": {},
    "source": [
     "# Get backend information with Qiskit\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e0f7648-b359-4492-b88d-26566ca78af6",
+   "id": "d35cee21-db7c-4641-83e4-c82ec7b45135",
    "metadata": {
     "tags": [
      "version-info"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3be18e3-d1b5-49c4-a82e-c3e5ecbd5491",
+   "id": "3db39b65-9b57-46e1-8829-848de1debb56",
    "metadata": {},
    "source": [
     "This page explains how to use Qiskit to find information about your available backends."
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d675eb-ad62-4436-9649-7cb6837e16f0",
+   "id": "f8e35982-38b5-4de1-b008-518aadc6ee81",
    "metadata": {},
    "source": [
     "## List backends\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a169a1d-0a02-41cd-89b0-5d606114866d",
+   "id": "4fd7473e-146f-48a3-9330-de76d6be02a0",
    "metadata": {},
    "source": [
     "<LegacyContent>\n",
@@ -78,15 +78,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ad5d41fc-2bb5-4a32-b8bb-8dbc48ef2337",
-   "metadata": {},
+   "id": "ab17b0f3-b2ef-4c5f-bce3-76273446a95d",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IBMBackend('ibm_brisbane')>,\n",
-       " <IBMBackend('ibm_sherbrooke')>,\n",
-       " <IBMBackend('ibm_torino')>]"
+       "[<IBMBackend('ibm_brisbane')>, <IBMBackend('ibm_sherbrooke')>]"
       ]
      },
      "execution_count": 1,
@@ -98,14 +98,14 @@
     "# Initialize your account\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "service = QiskitRuntimeService()\n",
+    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
     "\n",
     "service.backends()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "88565803-2450-45e1-9075-720d9c57681e",
+   "id": "9d5d3dfc-04ef-4786-b478-362c7f5a33f2",
    "metadata": {},
    "source": [
     "The [`QiskitRuntimeService.backend()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#backend) method (note that this is singular: *backend*) takes the name of the backend as the input parameter and returns an [`IBMBackend`](../api/qiskit-ibm-runtime/ibm-backend) instance representing that particular backend:"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cd1fd069-fe00-4865-8ee5-ba788fa405ba",
+   "id": "f63fcc81-b92b-4d05-ab00-e57fa4791f12",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bcbb09a-30c0-4b7e-af9f-71a501fc1c47",
+   "id": "ebe4d781-362e-470e-844e-bfbae621cfc9",
    "metadata": {},
    "source": [
     "## Filter backends\n",
@@ -150,19 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f9611008-cae5-451b-98a8-a59ae281b33e",
+   "execution_count": 3,
+   "id": "ef040a7d-f245-495e-a2ef-1fda69c78ba9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IBMBackend('ibm_brisbane')>,\n",
-       " <IBMBackend('ibm_sherbrooke')>,\n",
-       " <IBMBackend('ibm_torino')>]"
+       "[<IBMBackend('ibm_brisbane')>, <IBMBackend('ibm_sherbrooke')>]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89f7fe95-5fcd-4838-a26a-0ca4aa0882e4",
+   "id": "b5c9174e-c4a0-4a3a-8ead-c9738e6681fb",
    "metadata": {},
    "source": [
     "Use these keyword arguments to filter by any attribute in backend configuration ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_configuration_schema.json)) or status ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_status_schema.json)). A similar method is [`QiskitRuntimeService.least_busy()`](../api/qiskit-ibm-runtime/qiskit-runtime-service#least_busy), which takes the same filters as `backends()` but returns the backend that matches the filters and has the least number of jobs pending in the queue:"
@@ -181,17 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "89d7a8c6-05e8-4ef8-8e50-bc5ead67a436",
+   "execution_count": 4,
+   "id": "6d35d7fe-7503-4b7a-b3f7-c8816b029253",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<IBMBackend('ibm_torino')>"
+       "<IBMBackend('ibm_brisbane')>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ab8d5ff-b8ce-4562-8226-95f88bae9438",
+   "id": "a59d71ce-c7fe-4590-8384-8465a1da4ee9",
    "metadata": {},
    "source": [
     "## Static backend information\n",
@@ -215,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a42c128e-6559-498b-a313-8f1be787ab23",
+   "id": "44e4c978-374c-4b68-9f83-da84423ecae4",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48237011-bd39-4481-8df7-5264620aa6f3",
+   "id": "6553364b-6115-419e-9bbe-5b719097cd15",
    "metadata": {},
    "source": [
     "For a full list of attributes, see the [`IBMBackend` API documentation](/docs/api/qiskit-ibm-runtime/ibm-backend)."
@@ -249,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7c38144-478e-4c31-b050-82078de0f505",
+   "id": "0894bfbe-e8c6-4a8e-8c9b-3a4ccf5b6fc0",
    "metadata": {},
    "source": [
     "## Dynamic backend information\n",
@@ -259,19 +257,36 @@
     "\n",
     "### Qubit properties\n",
     "\n",
-    "The `backend.qubit_properties` method returns information about the qubits' physical attributes. This includes the qubit frequency in GHz and decay times (`t1` and `t2`) in µs."
+    "\n",
+    "The `backend.properties().qubit_property()` returns information about the qubits' physical attributes. It contains a dictionary of various properties of the qubit, each paired with its value and the timestamp of the last calibration.\n",
+    "\n",
+    "- `T1 (Relaxation Time)`: The T1 time represents the average duration a qubit remains in its excited state $|1\\rangle$ before decaying to its ground state $|0\\rangle$ due to energy relaxation. This parameter is used to characterize the qubit's energy relaxation behavior, and is expressed in units of seconds (s).\n",
+    "\n",
+    "- `T2 (Dephasing Time)`: The T2 time denotes the timescale over which a qubit maintains phase coherence of a superposition between the $|0\\rangle$ and $|1\\rangle$ states. It accounts for both energy relaxation and pure dephasing processes, providing insight into the qubit's coherence properties.\n",
+    "\n",
+    "- `frequency`: This parameter specifies the resonant frequency of the qubit, indicating the energy difference between the $|0\\rangle$ and $|1\\rangle$ states, expressed in hertz (Hz).\n",
+    "\n",
+    "- `anharmonicity`: Anharmonicity is the difference in energy between the first and second excited states of the qubit, also expressed in hertz (Hz).\n",
+    "\n",
+    "- `readout_error`: The readout error quantifies the average probability of incorrectly measuring a qubit's state. It is commonly calculated as the mean of prob_meas0_prep1 and prob_meas1_prep0, providing a single metric for measurement fidelity.\n",
+    "\n",
+    "- `prob_meas0_prep1`: This parameter indicates the probability of measuring a qubit in the 0 state when it was intended to be prepared in the $|1\\rangle$ state, denoted as $P(0 | 1)$. It reflects errors in state preparation and measurement (SPAM), particularly measurement errors in superconducting qubits.\n",
+    "\n",
+    "- `prob_meas1_prep0`: Similarly, this parameter represents the probability of measuring a qubit in the 1 state when it was intended to be prepared in the $|0\\rangle$ state, denoted as $P(1 | 0)$. Like prob_meas0_prep1, it reflects SPAM errors, with measurement errors being the predominant contributor in superconducting qubits.\n",
+    "\n",
+    "- `readout_length`: The readout_length specifies the duration of the readout operation for a qubit. It measures the time from the initiation of the measurement pulse to the completion of signal digitization, after which the system is ready for the next operation. Understanding this parameter is crucial for optimizing circuit execution, especially when incorporating mid-circuit measurements."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "94da1ff9-d491-4d78-8720-29141ab1dddf",
+   "id": "1f6dc981-cf88-4b10-9e45-5b42afbdac6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "QubitProperties(t1=0.00041975324220071947, t2=0.0001444721865111531, frequency=4635650381.341646)"
+       "QubitProperties(t1=0.000373804819308844, t2=0.00035501732926633675, frequency=4736289915.805671)"
       ]
      },
      "execution_count": 6,
@@ -280,12 +295,98 @@
     }
    ],
    "source": [
-    "backend.qubit_properties(0)  # properties of qubit 0"
+    "# fundamental physical properties of qubit 1\n",
+    "backend.qubit_properties(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "66d67ea5-5f50-4eea-a9b7-1ddc6293e844",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'T1': (0.0005462183129681861,\n",
+       "  datetime.datetime(2025, 6, 4, 18, 41, 14, tzinfo=tzlocal())),\n",
+       " 'T2': (0.0003767959201654903,\n",
+       "  datetime.datetime(2025, 6, 4, 18, 41, 14, tzinfo=tzlocal())),\n",
+       " 'frequency': (4635659902.192823,\n",
+       "  datetime.datetime(2025, 6, 4, 19, 20, 41, tzinfo=tzlocal())),\n",
+       " 'anharmonicity': (-313276039.4092362,\n",
+       "  datetime.datetime(2025, 6, 4, 19, 20, 41, tzinfo=tzlocal())),\n",
+       " 'readout_error': (0.005615234375,\n",
+       "  datetime.datetime(2025, 6, 4, 19, 20, 41, tzinfo=tzlocal())),\n",
+       " 'prob_meas0_prep1': (0.0068359375,\n",
+       "  datetime.datetime(2025, 6, 4, 19, 20, 41, tzinfo=tzlocal())),\n",
+       " 'prob_meas1_prep0': (0.00439453125,\n",
+       "  datetime.datetime(2025, 6, 4, 19, 20, 41, tzinfo=tzlocal())),\n",
+       " 'readout_length': (1.216e-06,\n",
+       "  datetime.datetime(2025, 6, 4, 19, 20, 41, tzinfo=tzlocal()))}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calibration data with detailed properties of qubit 0\n",
+    "backend.properties().qubit_property(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c112bba3-719a-443c-9e79-ccb955229055",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Qubit 126 Properties:\n",
+      "  T1: 0.0003018540542473072 seconds\n",
+      "  T2: 9.515509303172122e-05 seconds\n",
+      "  Frequency: 4831245145.564327 Hz\n",
+      "  Anharmonicity: -309300543.2479466 Hz\n",
+      "  Readout Error: 0.01416015625\n",
+      "  P(0 | 1): 0.0166015625\n",
+      "  P(1 | 0): 0.01171875\n",
+      "  Readout Length: 1.216e-06 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Retrieve qubit properties\n",
+    "qubit_index = 126  # Replace with your qubit index\n",
+    "qubit_props = backend.properties().qubit_property(qubit_index)\n",
+    "\n",
+    "# Access specific properties\n",
+    "t1 = qubit_props.get(\"T1\", (None,))[0]\n",
+    "t2 = qubit_props.get(\"T2\", (None,))[0]\n",
+    "frequency = qubit_props.get(\"frequency\", (None,))[0]\n",
+    "anharmonicity = qubit_props.get(\"anharmonicity\", (None,))[0]\n",
+    "readout_error = qubit_props.get(\"readout_error\", (None,))[0]\n",
+    "prob_meas0_prep1 = qubit_props.get(\"prob_meas0_prep1\", (None,))[0]\n",
+    "prob_meas1_prep0 = qubit_props.get(\"prob_meas1_prep0\", (None,))[0]\n",
+    "readout_length = qubit_props.get(\"readout_length\", (None,))[0]\n",
+    "\n",
+    "print(f\"Qubit {qubit_index} Properties:\")\n",
+    "print(f\"  T1: {t1} seconds\")\n",
+    "print(f\"  T2: {t2} seconds\")\n",
+    "print(f\"  Frequency: {frequency} Hz\")\n",
+    "print(f\"  Anharmonicity: {anharmonicity} Hz\")\n",
+    "print(f\"  Readout Error: {readout_error}\")\n",
+    "print(f\"  P(0 | 1): {prob_meas0_prep1}\")\n",
+    "print(f\"  P(1 | 0): {prob_meas1_prep0}\")\n",
+    "print(f\"  Readout Length: {readout_length} seconds\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1d3002ef-e196-4d02-b0d7-b84d1a75ce30",
+   "id": "c1c19258-c2e9-44bf-877c-e2524e755b1a",
    "metadata": {},
    "source": [
     "### Instruction properties\n",
@@ -295,17 +396,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "dc15db13-bf2a-4934-8ef6-cacfb953fde6",
+   "execution_count": 9,
+   "id": "6a1d1d34-1c42-4b27-9038-b7bc210ea3b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InstructionProperties(duration=5.333333333333332e-07, error=0.005851904505383088)"
+       "InstructionProperties(duration=5.333333333333332e-07, error=0.006190706171161048)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d304e9f-6e76-4876-bbb2-b6b768f3f9e3",
+   "id": "1db6f101-7f4e-4dec-9816-7a03960be988",
    "metadata": {},
    "source": [
     "The following cell shows the properties for a measurement operation (including the readout error) on qubit 0."
@@ -324,17 +425,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "810d55d0-2f60-4bce-a1c2-254e2b989b90",
+   "execution_count": 10,
+   "id": "c1125d67-1278-4f00-adaa-32028c0a9610",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InstructionProperties(duration=1.216e-06, error=0.0107421875)"
+       "InstructionProperties(duration=1.216e-06, error=0.005615234375)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ba1c604-b4b9-498d-ac29-9cb3a9644e09",
+   "id": "c90decc4-501e-47ce-8d6d-8eea3390198f",
    "metadata": {},
    "source": [
     "## Next steps\n",
